modifica nome de propriedade
